# mcp-projects

./: .gitignore  README.md
mcp-client-python-llm/: .env-example  .gitignore  README.md  mcp-client-default.py  mcp-client-jbang.py  mcp_servers_config-jdbc.json  mcp_servers_config.json  requirements.txt  test-load-config.py
mcp-erp-demo/customer-express-rest-crud-postgres/: README.md  app.js  package-lock.json  package.json
mcp-erp-demo/customer-express-rest-crud-postgres/config/: db.js
mcp-erp-demo/customer-express-rest-crud-postgres/db/: schema.sql
mcp-erp-demo/customer-express-rest-crud-postgres/models/: customer.js
mcp-erp-demo/customer-express-rest-crud-postgres/routes/: customers.js
mcp-erp-demo/product-python-rest-crud-postgres/: .gitignore  README.md  config.py  curl-commands.md  openapi.json  openapi.yaml  products.csv  requirements.txt  run.py  sample_data.sql  schema.sql
mcp-erp-demo/product-python-rest-crud-postgres/app/: main.py
mcp-erp-demo/product-python-rest-crud-postgres/app/database/: connection.py
mcp-erp-demo/product-python-rest-crud-postgres/app/models/: product.py
mcp-erp-demo/product-python-rest-crud-postgres/app/routes/: product.py
mcp-erp-demo/sales-orders-java-rest-crud-postgres/: README.md  curl-commands.md  openapi.json  openapi.yaml  pom.xml  sample-customer-data.sql
mcp-server-java-weather/: pom.xml
mcp-server-node-tmdb/: .env-example  .gitignore  README.md  index.js  package-lock.json  package.json
mcp-server-python-hello/: README.md  pyproject.toml  server.py
(+24 files in other folders)
